<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InserirActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/cadastro_clientes"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/cpf"/>
            <EditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_cpf"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/nome"/>
            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_nome"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/endereco"/>
            <EditText
                android:id="@+id/et_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_endereco"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/telefone"/>
            <EditText
                android:id="@+id/et_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_telefone"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/enviar"
                android:onClick="enviar"/>
            <ProgressBar
                android:id="@+id/pb_inserir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/resposta"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>