<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscarNome"
                android:textSize="22sp"/>
            <EditText
                android:id="@+id/et_buscar_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_digite_nome"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_buscar"
                    android:onClick="enviar"/>
                <ProgressBar
                    android:id="@+id/pbBusca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>
            <TableLayout
                android:id="@+id/tb_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tb_cpf"
                        android:layout_weight="10"
                    />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tb_nome"
                        android:layout_weight="10"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tb_endereco"
                        android:layout_weight="6"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tb_telefone"
                        android:layout_weight="6"
                        />
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>