<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TesteActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTeste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTeste"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:onClick="enviarParaPHP"
        />
    <ProgressBar
        android:id="@+id/pbTeste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/resultadoDeveAparecerAqui"
        android:id="@+id/tvTexto"/>


</androidx.appcompat.widget.LinearLayoutCompat>